adds header_image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<header id="header">
 			<div id="container-header"> <!-- #container-header is a child of #wrapper -->
 				<div id="logo">
-					<img id="image" src="https://cdn4.iconfinder.com/data/icons/fitness-vol-2/48/100-512.png" alt="running logo">
+					<img id="image" src="photos/header_image.jpg" alt="running logo">
 				</div>
 
 				<div id="tagline">
